<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_trading"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/trading" />
        <item
            android:id="@+id/nav_learning"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/learning" />
        <item
            android:id="@+id/nav_leaderboard"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/leaderboard" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@android:drawable/ic_menu_manage"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>