<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin_dashboard"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="@string/dashboard" />
        <item
            android:id="@+id/nav_manage_students"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/manage_users" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/reports" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/notifications" />
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_admin_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>